--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/ellemonke/COVID-19#readme",
   "dependencies": {
+    "-": "0.0.1",
     "csvtojson": "^2.0.10",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "save": "^2.4.0"
   }
 }
