--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -4,7 +4,11 @@ on:
       - master
     paths:
       - 'map.html'
-    steps:
-    - name: Map
-      with: 
-        API_KEY: ${{ secrets.API_KEY }}
+    jobs:
+      my_first_job:
+        name: My Job Name
+          steps:
+            - name: Map
+              uses: static/js/map.js
+              with: 
+                API_KEY: ${{ secrets.API_KEY }}
