--- a/.github/workflows/secrets.yaml
+++ b/.github/workflows/secrets.yaml
@@ -1,10 +1,13 @@
-on:
+name: COVID-19
+on: 
   push:
     branches:
       - master
     paths:
       - 'map.html'
-    jobs:
+jobs:
+  build:
+    name: Map
       steps:
         - name: Map
           uses: static/js/map.js
